--- a/Documents/Developpement/AngularProjects/tameri erp/tameri-front/angular.json
+++ b/Documents/Developpement/AngularProjects/tameri erp/tameri-front/angular.json
@@ -52,12 +52,22 @@
                         "styles": [
                             "node_modules/bootstrap/dist/css/bootstrap.css",
                             "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+                            "node_modules/datatables.net-dt/css/jquery.dataTables.css",
                             "node_modules/angular-notifier/styles.css",
+                            "node_modules/datatables.net-buttons-dt/css/buttons.dataTables.css",
                             "src/styles.scss"
                         ],
                         "scripts": [
-                            "node_modules/jquery/dist/jquery.js",
-                            "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+                          "node_modules/jquery/dist/jquery.js",
+                          "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
+                          "node_modules/datatables.net/js/jquery.dataTables.js",
+                          "node_modules/jszip/dist/jszip.js",
+                          "node_modules/datatables.net-buttons/js/dataTables.buttons.js",
+                          "node_modules/datatables.net-buttons/js/buttons.colVis.js",
+                          "node_modules/datatables.net-buttons/js/buttons.flash.js",
+                          "node_modules/datatables.net-buttons/js/buttons.html5.js",
+                          "node_modules/datatables.net-buttons/js/buttons.print.js",
+                          "./node_modules/hammerjs/hammer.min.js"
                         ]
                     },
                     "configurations": {
@@ -123,7 +133,9 @@
                         "styles": [
                             "src/styles.scss"
                         ],
-                        "scripts": []
+                        "scripts": [
+                          "./node_modules/hammerjs/hammer.min.js"
+                        ]
                     }
                 }
             }
