--- a/Documents/Developpement/AngularProjects/tameri erp/tameri-front/package.json
+++ b/Documents/Developpement/AngularProjects/tameri erp/tameri-front/package.json
@@ -19,12 +19,23 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@igniteui/material-icons-extended": "^2.10.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
+    "angular-datatables": "^14.0.0",
     "angular-notifier": "^12.0.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "cdbootstrap": "^1.3.1",
+    "datatables.net": "^1.12.1",
+    "datatables.net-buttons": "^2.2.3",
+    "datatables.net-buttons-dt": "^2.2.3",
+    "datatables.net-dt": "^1.12.1",
+    "fflate": "^0.7.3",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^14.2.1",
     "jquery": "^3.6.1",
+    "jszip": "^3.10.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -33,7 +44,12 @@
     "@angular-devkit/build-angular": "^14.2.5",
     "@angular/cli": "~14.2.5",
     "@angular/compiler-cli": "^14.2.0",
+    "@igniteui/angular-schematics": "~14.0.1000",
+    "@types/datatables.net": "^1.10.24",
+    "@types/datatables.net-buttons": "^1.4.7",
+    "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~4.0.0",
+    "@types/jquery": "^3.5.14",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
